Work around text overflow issues in entry descriptions

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -211,6 +211,11 @@ main {
     max-width: 100%;
 }
 
+.entry-description {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .entry-item {
     &.disqualified {
         text-decoration: line-through;
